# 05_fractial_mpi

./: CMakeLists.txt  fractal_mpi.cpp  fractal_mpi.h  main.cpp  main_fractal.cpp
